# university

./: .gitignore  README.md
MonteCarlo-kurs/: CMakeLists.txt  main.cpp
RSA/: ferma.py  main.py  sieve_of_eratosthenes.py
algorithms/Dijkstra_on_large_graph/: hw2-5.ipynb  (+1 more)
architecture/: 1lab.circ  2lab.circ  3lab.circ  alu_control.circ  aluopcode.txt  exceptions.asm  main.txt  mips1.asm  mur_to_bit.txt  output.txt  rgr2.circ  tablegen.py  tablegen_copy.py  task4_2.asm  task4_3.asm
asm_prac/: cos.py  lll-fp-conveter.py  sec.8080.asm  sec.py
asm_rgr/: main.asm  main.c
brainfuck_practice/: main.bf  program.py  refactored_task.md  task.md  temp.bf  translate.py
calc/: diff.py  machine_eps.py  newton_int.py  part_lin_int.py
crypto/: main.py
experiment/: CMakeLists.txt  main.cpp
funcan/: nonlinear.py  orthonorm.py  program.txt  slau.py  slau_num.py  test.py
hash_table/: main.py
image_processing/: CmakeLists.txt  main.cpp
lex/: CMakeLists.txt  main.cpp
lex/tests/: CMakeLists.txt  test_tests.cpp
miniccomp/: .clang-format  CMakeLists.txt  expr.txt  main.cpp
olimpia/: readme.md
operational_systems/: rgr1.s
prima_algorithm/: main.cpp  test.py
prims_algorithm/: CMakeLists.txt  fb_heap.md  main.cpp  tests.md
probab_prac/: CMakeLists.txt  main.cpp
probab_theor_practicum/: main.py  my_result.txt  sec_main.py  th_main.py
pseudo_rng/: main.py
sdnf/: CMakeLists.txt  main.cpp
sha1/: main.py
syntax_analysis_prac/: ipn_magic.py  math_sa.py  regex_sa.py
text characteristics/: main.py  text.txt
undirected_graph_to_directed_tree/: main.cpp
(+263 files in other folders)
